[fix]피드 API 수정